--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -242,6 +242,8 @@
         </div>
     </div>
     
+    <script src="/static/js/utils.js"></script>
+    <script src="/static/js/api.js"></script>
     <script src="/static/js/app.js"></script>
     <script>
         // Modal functions
